--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<body style="background-color: grey;">
 		<div id="weather-zone">
 			<h3>Want to know your weather conditions? </h3>
-			<p>Input your location: </p>
+			<p>Input your city location: </p>
 			<input type="text" id="city" placeholder="Input your City Location" required/><br><br>
 			<button name="button" id="button" value="submit">Submit</button>
 		</div>
