added an innerHTML to JS to display the relative weather info

--- a/index.html
+++ b/index.html
@@ -42,6 +42,9 @@
         </div>
       </form>
     </section>
+    <div id="responseDisplay">
+      
+    </div>
 
     <script src="call_weather.js"></script>
   </body>
